CRUD de Productos

--- a/PRYTienda/TiendaDjango/tienda/templates/layout_cliente.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/layout_cliente.html
@@ -51,7 +51,7 @@
                             <a class="nav-link active" href="{% url 'home' %}">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Productos</a>
+                            <a class="nav-link" href="{% url 'listar_productos_publico' %}">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Ofertas</a>
