--- a/PRYTienda/TiendaDjango/tienda/templates/panel/home.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/panel/home.html
@@ -27,7 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Productos</h5>
                     <p class="card-text">Módulo para productos (Próximamente)</p>
-                    <a href="#" class="btn btn-secondary disabled">Próximamente</a>
+                    <a href="/productos/" class="btn btn-primary">Ir a Productos</a>
                 </div>
             </div>
         </div>
