--- a/PRYTienda/TiendaDjango/tienda/templates/layout_tienda.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/layout_tienda.html
@@ -76,6 +76,12 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link admin-link" href="{% url 'listar_productos' %}">
+                        🛒 Productos
+                    </a>
+                </li>
+
             </ul>
         </aside>
 
