--- a/PRYTienda/TiendaDjango/tienda/templates/panel/home.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/panel/home.html
@@ -33,9 +33,9 @@
         <div class="col-md-4">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">Categorías</h5>
-                    <p class="card-text">Módulo para categorías (Próximamente)</p>
-                    <a href="#" class="btn btn-secondary disabled">Próximamente</a>
+                    <h5 class="card-title">Pedidos</h5>
+                    <p class="card-text">Módulo para pedidos </p>
+                    <a href="/panel/pedidos/" class="btn btn-primary">Ir a Pedidos</a>
                 </div>
             </div>
         </div>
