--- a/PRYTienda/TiendaDjango/tienda/templates/layout_cliente.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/layout_cliente.html
@@ -70,7 +70,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                     <li><a class="dropdown-item" href="#">Mi Perfil</a></li>
-                                    <li><a class="dropdown-item" href="#">Mis Pedidos</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'mis_pedidos' %}">Mis Pedidos</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
                                         <a class="dropdown-item text-danger" href="{% url 'logout' %}">
