--- a/PRYTienda/TiendaDjango/tienda/templates/layout_tienda.html
+++ b/PRYTienda/TiendaDjango/tienda/templates/layout_tienda.html
@@ -76,6 +76,12 @@
                         🛒 Productos
                     </a>
                 </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link admin-link" href="{% url 'listar_pedidos' %}">
+                        📦 Pedidos
+                    </a>
+                </li>
 
             </ul>
         </aside>
